--- a/polybench/stencils/heat-3d/Makefile
+++ b/polybench/stencils/heat-3d/Makefile
@@ -1,9 +1,10 @@
 include ../../config.mk
 
 EXTRA_FLAGS=
+BIN_DIR=./
 
 heat-3d: heat-3d.c heat-3d.h
-	${VERBOSE} ${CC} -o heat-3d heat-3d.c ${CFLAGS} -I. -I../../utilities ../../utilities/polybench.c ${EXTRA_FLAGS}
+	${VERBOSE} ${CC} -o ${BIN_DIR}/heat-3d heat-3d.c ${CFLAGS} -I. -I../../utilities ../../utilities/polybench.c ${EXTRA_FLAGS}
 
 clean:
 	@ rm -f heat-3d
